fix event spacing

--- a/style.css
+++ b/style.css
@@ -790,6 +790,7 @@ footer {
     border-top-right-radius: 10px;
     padding: 10px 0;
     margin: auto 0;
+    line-height: 1;
   }
 
 
